to do productpage, change some сщььщт ыендуы

--- a/productpage.html
+++ b/productpage.html
@@ -84,7 +84,7 @@
 							<li><a href="#">Contact</a></li>
 						</ul>
 					</nav>
-					<nav class="aside-menu">
+					<nav class="aside-menu aside-menu-lighter">
 						<h3>Category options</h3>
 						<ul>
 							<li><a href="#">Men</a></li>
@@ -94,7 +94,7 @@
 							<li><a href="#">Outerwear</a></li>
 						</ul>
 					</nav>
-					<nav class="aside-menu">
+					<nav class="aside-menu aside-menu-lighter">
 						<h3>Brand options</h3>
 						<ul>
 							<li><a href="#">Billabong</a></li>
@@ -143,99 +143,312 @@
 						</ul>
 						<a class="back-previos f-right" href="#">Back to previos page</a>
 					</div>
-					<div class="product-info">
-						<div class="product-tabbar">
-			             	<ul>
-				                <li><a href="#">Product description</a></li>
-				                <li><a href="#">Additional information</a></li>
-				                <li><a href="#">Reviews</a></li>
-				                <li><a href="#">Product tags</a></li>
-			            	</ul>
-			            </div>
-            			<div class="product-tab">
-            				<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words 
-							which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the 
-							middle of text.
-
-							There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words 
-							which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the 
-							middle of text.
-							- 6.1 oz. 100% preshrunk heavyweight cotton
-							- Shoulder-to-shoulder taping
-							- Double-needle sleeves and bottom hem
-
-							It uses a dictionary of over 200 Latin words, combined with a handful of model sentence structures, to generate Lorem Ipsum which looks reasonable.</p> 
-            			</div>
+					<div class="product-info clearfix">
+						<div class="product-photos f-left">
+						    <div class="product-big-photo">
+						    	<img src="img/product-page.jpg" alt="">
+						    </div>
+				            <div class="product-thumbs-block">
+				                <ul class="product-thumbs">
+				                	<li class="product-thumb">
+				                		<a href=""><!--починить ссылки-->
+				                			<img src="img/product-thumb.jpg" alt="">
+					                	</a>
+					                </li>
+				                	<li class="product-thumb">
+				                		<a href="">
+				                			<img src="img/product-thumb.jpg" alt="">
+					                	</a>
+					                </li>
+					                <li class="product-thumb">
+				                		<a href="">
+				                			<img src="img/product-thumb.jpg" alt="">
+					                	</a>
+					                </li>
+					                <li class="product-thumb">
+				                		<a href="">
+				                			<img src="img/product-thumb.jpg" alt="">
+					                	</a>
+					                </li>
+					                <li class="product-thumb">
+				                		<a href="">
+				                			<img src="img/product-thumb.jpg" alt="">
+					                	</a>
+					                </li>
+					                <li class="product-thumb">
+				                		<a href="">
+				                			<img src="img/product-thumb.jpg" alt="">
+					                	</a>
+					                </li>
+					            </ul>
+				                <div class="thumbs-arrow">
+					             	<button class="thumb-prev"></button>
+					               	<button class="thumb-next"></button>
+					            </div>
+				            </div>				            	
+				        </div>	
+				        <div class="product-descriptions">
+				        	<div class="product-name">
+					        	<h1>PEEKY CROPPED</h1>
+					        	<p>
+					        		<span class="stars"></span>
+					        		<span class="reviews">
+					        			<span class="reviews-value">1</span>
+					        			Review(s)
+					        		</span>
+					        		<span class="rewiews-add">Add Your Review</span>
+					        	</p>				      
+				        	</div>  
+				        	<div class="product-price-code">
+				        		<p class="shop-price">578.50</p>
+				        		<div class="product-code-availability">
+				        			<p>Product code: <span>257</span></p>
+				        			<p>Availability: <span>In stock</span></p>
+				        		</div>
+				        	</div>
+				        	<div class="line"></div>
+				        	<div class="product-overview">
+				        		<h2>Quick overview</h2>
+				        		<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. When an unknown printer took a galley of type.</p>
+				        	</div>
+				        	<div class="line"></div>
+				        	<div class="product-size-length">
+				        		<h2>Size</h2>
+				        		<ul>
+				        			<li>
+				        				<label for="size-25" class="product-radio">
+                                         	<input id="size-25" name="size" type="radio" value="25">25
+                                     	</label>
+				        			</li>
+				        			<li>
+				        				<label for="size-26" class="product-radio">
+                                         	<input id="size-26" name="size" type="radio" value="26" checked>26
+                                     	</label>
+				        			</li>
+				        			<li>
+				        				<label for="size-27" class="product-radio">
+                                         	<input id="size-27" name="size" type="radio" value="27">27
+                                     	</label>
+				        			</li>
+				        			<li>
+				        				<label for="size-28" class="product-radio">
+                                         	<input id="size-28" name="size" type="radio" value="28">28
+                                     	</label>
+				        			</li>
+				        			<li>
+				        				<label for="size-29" class="product-radio">
+                                         	<input id="size-29" name="size" type="radio" value="29">29
+                                     	</label>
+				        			</li>
+				        			<li>
+				        				<label for="size-30" class="product-radio">
+                                         	<input id="size-30" name="size" type="radio" value="30">30
+                                     	</label>
+				        			</li>
+				        			<li>
+				        				<label for="size-31" class="product-radio">
+                                         	<input id="size-31" name="size" type="radio" value="31">31
+                                     	</label>
+				        			</li>
+				        			<li>
+				        				<label for="size-32" class="product-radio">
+                                         	<input id="size-32" name="size" type="radio" value="32">32
+                                     	</label>
+				        			</li>
+				        			<li>
+				        				<label for="size-33" class="product-radio">
+                                         	<input id="size-33" name="size" type="radio" value="33">33
+                                     	</label>
+				        			</li>
+				        		</ul>
+				        	</div>
+				        	<div class="line"></div>
+				        	<div class="product-size-length">
+				        		<h2>Length</h2>
+				        		<ul>
+				        			<li>
+				        				<label for="size-32" class="product-radio">
+                                         	<input id="size-32" name="size" type="radio" value="32">32
+                                     	</label>
+				        			</li>
+				        			<li>
+				        				<label for="size-34" class="product-radio">
+                                         	<input id="size-34" name="size" type="radio" value="34">34
+                                     	</label>
+				        			</li>
+				        		</ul>
+				        	</div>
+				        	<div class="line"></div>
+				        	<div class="product-add clearfix">
+				        		<form class="product-quantity f-left">
+				        			<p>Quantity:</p>
+			                	    <input type="text" value="1">
+			                    	<button class="product-quantity-add">+</button>
+			                	</form>
+			                	<button class="product-button-add f-left">Add to cart</button>
+			                	<ul class="add-list f-right">
+			                		<li><a href="">Add to Wishlist</a></li>
+			                		<li><a href="">Add to Compare</a></li>
+			                		<li><a href="">Email to a Friend</a></li>
+			                	</ul>
+				        	</div>
+				        </div>
 					</div>
+					<div class="product-tabbar">
+			           	<ul class="product-tabbar-menu">
+				            <li><a class="active" href="#">Product description</a></li>
+				            <li><a href="#">Additional information</a></li>
+				            <li><a href="#">Reviews</a></li>
+				            <li><a href="#">Product tags</a></li>
+			          	</ul>
+			           	<div class="product-tab">
+	            			<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words
+	            			<br />
+							which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the <br />
+							middle of text.
+							<br />
+							<br />
+							There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words 
+							<br />
+							which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the 
+							<br />
+							middle of text.<br /></p>
+							<ul>
+								<li>- 6.1 oz. 100% preshrunk heavyweight cotton</li>
+								<li>- Shoulder-to-shoulder taping</li>
+								<li>- Double-needle sleeves and bottom hem</li>
+							</ul>
+							<br />
+							<p>It uses a dictionary of over 200 Latin words, combined with a handful of model sentence structures, to generate Lorem Ipsum which looks reasonable.</p> 
+            			</div>
+            			<div class="product-tab hidden"></div>
+            			<div class="product-tab hidden"></div>
+            			<div class="product-tab hidden"></div>
+		            </div>
 					<div class="shop clearfix">
-						<figure class="shop-item mark">
-							<a href="#">
-								<img src="img/cart_09.jpg" alt="">
-								<figcuption>
-									<p class="goods-name f-left">Sleeve spring suit</p>
-									<div class="f-right">
-										<p class="shop-price f-right">865.00</p>
-									</div>
-								</figcuption>
-							</a>
-						</figure>
-						<figure class="shop-item mark mark-hot">
-							<a href="#">
-								<img src="img/shop-cat-gridx3_19.jpg" alt="">
-								<figcuption>
-									<p class="goods-name f-left">Salty dayz</p>
-									<div class="f-right">
-										<p class="shop-price">770.50</p>
-										<p class="shop-price shop-old-price">1,270,15</p>
-									</div>
-								</figcuption>
-							</a>
-						</figure>
-						<figure class="shop-item">
-							<a href="#">
-								<img src="img/shop-cat-gridx3_19.jpg" alt="">
-								<figcuption>
-									<p class="goods-name f-left">Cheeky jane</p>
-									<div class="f-right">
-										<p class="shop-price">280.70</p>
-									</div>
-								</figcuption>
-							</a>
-						</figure>
-						
-						<figure class="shop-item">
-							<a href="#">
-								<img src="img/shop-cat-gridx3_19.jpg" alt="">
-								<figcuption>
-									<p class="goods-name f-left">Oq scallop solid</p>
-										<div class="f-right">
-										<p class="shop-price">765.00</p>
-									</div>
-								</figcuption>
-							</a>
-						</figure>
-						<figure class="shop-item">
-							<a href="#">
-								<img src="img/cart_12.jpg" alt="">
-								<figcuption>
-									<p class="goods-name f-left">Stripe 19 qs</p>
-									<div class="f-right">
-										<p class="shop-price">230.50</p>
-									</div>
-								</figcuption>
-							</a>
-						</figure>
-						<figure class="shop-item">
-							<a href="#">
-								<img src="img/shop-cat-gridx3_19.jpg" alt="">
-								<figcuption>
-									<p class="goods-name f-left">Yoke 19 qs</p>
-									<div class="f-right">
-										<p class="shop-price">1.130.70</p>
-									</div>
-								</figcuption>
-							</a>
-						</figure>						
+						<section class="also-like">
+							<h2>You might also like</h2>
+							<div class="coloring-slider">
+								<figure class="shop-item mark">
+									<a href="#">
+										<span class="shop-item-img">
+											<img src="img/cart_09.jpg" alt="">
+										</span>
+										<figcuption>
+											<p class="goods-name f-left">Sleeve spring suit</p>
+											<div class="f-right">
+												<p class="shop-price f-right">865.00</p>
+											</div>
+										</figcuption>
+									</a>
+								</figure>
+								<figure class="shop-item mark mark-hot">
+									<a href="#">
+										<span class="shop-item-img">
+											<img src="img/shop-cat-gridx3_19.jpg" alt="">
+										</span>
+										<figcuption>
+											<p class="goods-name f-left">Salty dayz</p>
+											<div class="f-right">
+												<p class="shop-price">770.50</p>
+												<p class="shop-price shop-old-price">1,270,15</p>
+											</div>
+										</figcuption>
+									</a>
+								</figure>
+								<figure class="shop-item">
+									<a href="#">
+										<span class="shop-item-img">
+											<img src="img/shop-cat-gridx3_19.jpg" alt="">
+										</span>
+										<figcuption>
+											<p class="goods-name f-left">Cheeky jane</p>
+											<div class="f-right">
+												<p class="shop-price">280.70</p>
+											</div>
+										</figcuption>
+									</a>
+								</figure>
+								<figure class="shop-item">
+									<a href="#">
+										<span class="shop-item-img">
+											<img src="img/shop-cat-gridx3_19.jpg" alt="">
+										</span>
+										<figcuption>
+											<p class="goods-name f-left">Cheeky jane</p>
+											<div class="f-right">
+												<p class="shop-price">280.70</p>
+											</div>
+										</figcuption>
+									</a>
+								</figure>
+								<div class="coloring-slider-arrow">
+				                	<button class="coloring-slider-prev"></button>
+				                	<button class="coloring-slider-next"></button>
+				              	</div>
+							</div>
+						</section>
+						<section class="recently-viewed">
+							<h2>Recently viewed</h2>
+							<div class="coloring-slider">
+								<figure class="shop-item">
+									<a href="#">
+										<span class="shop-item-img">
+											<img src="img/shop-cat-gridx3_19.jpg" alt="">
+										</span>
+										<figcuption>
+											<p class="goods-name f-left">Oq scallop solid</p>
+												<div class="f-right">
+												<p class="shop-price">765.00</p>
+											</div>
+										</figcuption>
+									</a>
+								</figure>
+								<figure class="shop-item">
+									<a href="#">
+										<span class="shop-item-img">
+											<img src="img/cart_12.jpg" alt="">
+										</span>
+										<figcuption>
+											<p class="goods-name f-left">Stripe 19 qs</p>
+											<div class="f-right">
+												<p class="shop-price">230.50</p>
+											</div>
+										</figcuption>
+									</a>
+								</figure>
+								<figure class="shop-item">
+									<a href="#">
+										<span class="shop-item-img">
+											<img src="img/shop-cat-gridx3_19.jpg" alt="">
+										</span>
+										<figcuption>
+											<p class="goods-name f-left">Yoke 19 qs</p>
+											<div class="f-right">
+												<p class="shop-price">1.130.70</p>
+											</div>
+										</figcuption>
+									</a>
+								</figure>	
+								<figure class="shop-item">
+									<a href="#">
+										<span class="shop-item-img">
+											<img src="img/shop-cat-gridx3_19.jpg" alt="">
+										</span>
+										<figcuption>
+											<p class="goods-name f-left">Cheeky jane</p>
+											<div class="f-right">
+												<p class="shop-price">280.70</p>
+											</div>
+										</figcuption>
+									</a>
+								</figure>
+								<div class="coloring-slider-arrow">
+				                	<button class="coloring-slider-prev"></button>
+				                	<button class="coloring-slider-next"></button>
+				              	</div>
+							</div>
+						</section>					
 					</div>
 				</section>
 			</main>
