--- a/shop-cat-gridx3.html
+++ b/shop-cat-gridx3.html
@@ -84,7 +84,7 @@
 							<li><a href="#">Contact</a></li>
 						</ul>
 					</nav>
-					<nav class="aside-menu">
+					<nav class="aside-menu aside-menu-lighter">
 						<h3>Category options</h3>
 						<ul>
 							<li><a href="#">Men</a></li>
@@ -94,7 +94,7 @@
 							<li><a href="#">Outerwear</a></li>
 						</ul>
 					</nav>
-					<nav class="aside-menu">
+					<nav class="aside-menu aside-menu-lighter">
 						<h3>Brand options</h3>
 						<ul>
 							<li><a href="#">Billabong</a></li>
@@ -152,7 +152,7 @@
 									<option>Position 2</option>
 								</select>
 							</span>
-							<span class="fa fa-long-arrow-up"></span>
+							<a href="" class="fa fa-long-arrow-up"></a>
 						</div>
 						<div class="view">
 							View as:
@@ -180,10 +180,12 @@
 							</ul>
 						</div>
 					</div>
-					<div class="shop clearfix">
+					<div class="shop">
 						<figure class="shop-item mark">
 							<a href="#">
-								<img src="img/cart_09.jpg" alt="">
+								<span class="shop-item-img">
+									<img src="img/cart_09.jpg" alt="">
+								</span>
 								<figcuption>
 									<p class="goods-name f-left">Sleeve spring suit</p>
 									<div class="f-right">
@@ -194,7 +196,9 @@
 						</figure>
 						<figure class="shop-item mark mark-hot">
 							<a href="#">
-								<img src="img/shop-cat-gridx3_19.jpg" alt="">
+								<span class="shop-item-img">
+									<img src="img/shop-cat-gridx3_19.jpg" alt="">
+								</span>
 								<figcuption>
 									<p class="goods-name f-left">Salty dayz</p>
 									<div class="f-right">
@@ -206,7 +210,9 @@
 						</figure>
 						<figure class="shop-item">
 							<a href="#">
-								<img src="img/shop-cat-gridx3_19.jpg" alt="">
+								<span class="shop-item-img">
+									<img src="img/shop-cat-gridx3_19.jpg" alt="">
+								</span>
 								<figcuption>
 									<p class="goods-name f-left">Cheeky jane</p>
 									<div class="f-right">
@@ -217,7 +223,9 @@
 						</figure>
 						<figure class="shop-item">
 							<a href="#">
-								<img src="img/shop-cat-gridx3_19.jpg" alt="">
+								<span class="shop-item-img">
+									<img src="img/shop-cat-gridx3_19.jpg" alt="">
+								</span>
 								<figcuption>
 									<p class="goods-name f-left">Synergy 2mm back zip</p>
 									<div class="f-right">
@@ -228,7 +236,9 @@
 						</figure>
 						<figure class="shop-item">
 							<a href="#">
-								<img src="img/cart_09.jpg" alt="">
+								<span class="shop-item-img">
+									<img src="img/cart_09.jpg" alt="">
+								</span>
 								<figcuption>
 									<p class="goods-name f-left">Synery 2mm</p>
 									<div class="f-right">
@@ -239,7 +249,9 @@
 						</figure>
 						<figure class="shop-item mark mark-hot">
 							<a href="#">
-								<img src="img/cart_12.jpg" alt="">
+								<span class="shop-item-img">
+									<img src="img/cart_12.jpg" alt="">
+								</span>
 								<figcuption>
 									<p class="goods-name f-left">Surf yoke 19 qs</p>
 									<div class="f-right">
@@ -251,7 +263,9 @@
 						</figure>
 						<figure class="shop-item">
 							<a href="#">
-								<img src="img/shop-cat-gridx3_19.jpg" alt="">
+								<span class="shop-item-img">
+									<img src="img/shop-cat-gridx3_19.jpg" alt="">
+								</span>
 								<figcuption>
 									<p class="goods-name f-left">Oq scallop solid</p>
 										<div class="f-right">
@@ -262,7 +276,9 @@
 						</figure>
 						<figure class="shop-item">
 							<a href="#">
-								<img src="img/cart_12.jpg" alt="">
+								<span class="shop-item-img">
+									<img src="img/cart_12.jpg" alt="">
+								</span>
 								<figcuption>
 									<p class="goods-name f-left">Stripe 19 qs</p>
 									<div class="f-right">
@@ -273,7 +289,9 @@
 						</figure>
 						<figure class="shop-item">
 							<a href="#">
-								<img src="img/shop-cat-gridx3_19.jpg" alt="">
+								<span class="shop-item-img">
+									<img src="img/shop-cat-gridx3_19.jpg" alt="">
+								</span>
 								<figcuption>
 									<p class="goods-name f-left">Yoke 19 qs</p>
 									<div class="f-right">
@@ -284,7 +302,9 @@
 							</figure>
 						<figure class="shop-item">
 							<a href="#">
-								<img src="img/shop-cat-gridx3_19.jpg" alt="">
+								<span class="shop-item-img">
+									<img src="img/shop-cat-gridx3_19.jpg" alt="">
+								</span>
 								<figcuption>
 									<p class="goods-name f-left">Oq scallop solid</p>
 									<div class="f-right">
@@ -295,7 +315,9 @@
 						</figure>
 						<figure class="shop-item mark mark-hot">
 							<a href="#">
-								<img src="img/shop-cat-gridx3_19.jpg" alt="">
+								<span class="shop-item-img">
+									<img src="img/shop-cat-gridx3_19.jpg" alt="">
+								</span>
 								<figcuption>
 									<p class="goods-name f-left">Stripe 19 qs</p>
 									<div class="f-right">
@@ -307,7 +329,9 @@
 						</figure>
 						<figure class="shop-item mark">
 							<a href="#">
-								<img src="img/shop-cat-gridx3_19.jpg" alt="">
+								<span class="shop-item-img">
+									<img src="img/shop-cat-gridx3_19.jpg" alt="">
+								</span>
 								<figcuption>
 									<p class="goods-name f-left">Yoke 19 qs</p>
 									<div class="f-right">
@@ -319,7 +343,9 @@
 						</figure>
 						<figure class="shop-item mark mark-hot">
 							<a href="#">
-								<img src="img/shop-cat-gridx3_19.jpg" alt="">
+								<span class="shop-item-img">
+									<img src="img/shop-cat-gridx3_19.jpg" alt="">
+								</span>
 								<figcuption>
 									<p class="goods-name f-left">Oq scallop solid</p>
 									<div class="f-right">
@@ -331,7 +357,9 @@
 						</figure>
 						<figure class="shop-item">
 							<a href="#">
-								<img src="img/shop-cat-gridx3_19.jpg" alt="">
+								<span class="shop-item-img">
+									<img src="img/shop-cat-gridx3_19.jpg" alt="">
+								</span>
 								<figcuption>
 									<p class="goods-name f-left">Stripe 19 qs</p>
 									<div class="f-right">
@@ -342,7 +370,9 @@
 						</figure>
 						<figure class="shop-item">
 							<a href="#">
-								<img src="img/shop-cat-gridx3_19.jpg" alt="">
+								<span class="shop-item-img">
+									<img src="img/shop-cat-gridx3_19.jpg" alt="">
+								</span>
 								<figcuption>
 									<p class="goods-name f-left">Yoke 19 qs</p>
 									<div class="f-right">
@@ -361,7 +391,7 @@
 									<option>Position 2</option>
 								</select>
 							</span>
-							<span class="fa fa-long-arrow-up"></span>
+							<a href="" class="fa fa-long-arrow-up"></a>
 						</div>
 						<div class="view">
 							View as:
