--- a/home.html
+++ b/home.html
@@ -132,7 +132,7 @@
 					</aside>
 					<section class="right-column content-column">
 						<section class="shop-products">						
-							<div class="shop clearfix">
+							<div class="shop">
 								<div class="clearfix">
 									<h2 class="f-left">New products</h2>
 									<ul class="shop-slider-arrow f-right">
@@ -142,7 +142,9 @@
 								</div>
 								<figure class="shop-item mark">
 									<a href="#">
-										<img src="img/cart_09.jpg" alt="">
+										<span class="shop-item-img">
+											<img src="img/cart_09.jpg" alt="">
+										</span>
 										<figcuption>
 											<p class="goods-name f-left">Sleeve spring suit</p>
 											<div class="f-right">
@@ -153,7 +155,9 @@
 								</figure>
 								<figure class="shop-item mark mark-hot">
 									<a href="#">
-										<img src="img/shop-cat-gridx3_19.jpg" alt="">
+										<span class="shop-item-img">
+											<img src="img/shop-cat-gridx3_19.jpg" alt="">
+										</span>
 										<figcuption>
 											<p class="goods-name f-left">Salty dayz</p>
 											<div class="f-right">
@@ -165,7 +169,9 @@
 								</figure>
 								<figure class="shop-item">
 									<a href="#">
-										<img src="img/shop-cat-gridx3_19.jpg" alt="">
+										<span class="shop-item-img">
+											<img src="img/shop-cat-gridx3_19.jpg" alt="">
+										</span>
 										<figcuption>
 											<p class="goods-name f-left">Cheeky jane</p>
 											<div class="f-right">
@@ -176,7 +182,9 @@
 								</figure>
 								<figure class="shop-item">
 									<a href="#">
-										<img src="img/shop-cat-gridx3_19.jpg" alt="">
+										<span class="shop-item-img">
+											<img src="img/shop-cat-gridx3_19.jpg" alt="">
+										</span>
 										<figcuption>
 											<p class="goods-name f-left">Synergy 2mm back zip</p>
 											<div class="f-right">
@@ -187,7 +195,9 @@
 								</figure>
 								<figure class="shop-item">
 									<a href="#">
-										<img src="img/cart_09.jpg" alt="">
+										<span class="shop-item-img">
+											<img src="img/cart_09.jpg" alt="">
+										</span>
 										<figcuption>
 											<p class="goods-name f-left">Synery 2mm</p>
 											<div class="f-right">
@@ -198,7 +208,9 @@
 								</figure>
 								<figure class="shop-item mark mark-hot">
 									<a href="#">
-										<img src="img/cart_12.jpg" alt="">
+										<span class="shop-item-img">
+											<img src="img/cart_12.jpg" alt="">
+										</span>
 										<figcuption>
 											<p class="goods-name f-left">Surf yoke 19 qs</p>
 											<div class="f-right">
@@ -221,7 +233,9 @@
 								</div>
 								<figure class="shop-item mark">
 									<a href="#">
-										<img src="img/cart_09.jpg" alt="">
+										<span class="shop-item-img">
+											<img src="img/cart_09.jpg" alt="">
+										</span>
 										<figcuption>
 											<p class="goods-name f-left">Sleeve spring suit</p>
 											<div class="f-right">
@@ -232,7 +246,9 @@
 								</figure>
 								<figure class="shop-item mark mark-hot">
 									<a href="#">
-										<img src="img/shop-cat-gridx3_19.jpg" alt="">
+										<span class="shop-item-img">
+											<img src="img/shop-cat-gridx3_19.jpg" alt="">
+										</span>
 										<figcuption>
 											<p class="goods-name f-left">Salty dayz</p>
 											<div class="f-right">
@@ -244,7 +260,9 @@
 								</figure>
 								<figure class="shop-item">
 									<a href="#">
-										<img src="img/shop-cat-gridx3_19.jpg" alt="">
+										<span class="shop-item-img">
+											<img src="img/shop-cat-gridx3_19.jpg" alt="">
+										</span>
 										<figcuption>
 											<p class="goods-name f-left">Cheeky jane</p>
 											<div class="f-right">
@@ -266,7 +284,9 @@
 								</div>
 								<figure class="shop-item mark">
 									<a href="#">
-										<img src="img/cart_09.jpg" alt="">
+										<span class="shop-item-img">
+											<img src="img/cart_09.jpg" alt="">
+										</span>
 										<figcuption>
 											<p class="goods-name f-left">Sleeve spring suit</p>
 											<div class="f-right">
@@ -277,7 +297,9 @@
 								</figure>
 								<figure class="shop-item mark mark-hot">
 									<a href="#">
-										<img src="img/shop-cat-gridx3_19.jpg" alt="">
+										<span class="shop-item-img">
+											<img src="img/shop-cat-gridx3_19.jpg" alt="">
+										</span>
 										<figcuption>
 											<p class="goods-name f-left">Salty dayz</p>
 											<div class="f-right">
@@ -289,7 +311,9 @@
 								</figure>
 								<figure class="shop-item">
 									<a href="#">
-										<img src="img/shop-cat-gridx3_19.jpg" alt="">
+										<span class="shop-item-img">
+											<img src="img/shop-cat-gridx3_19.jpg" alt="">
+										</span>
 										<figcuption>
 											<p class="goods-name f-left">Cheeky jane</p>
 											<div class="f-right">
