--- a/productpage.html
+++ b/productpage.html
@@ -5,8 +5,6 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" type="text/css" href="fonts/font-awesome-4.0.3/css/font-awesome.min.css">
-		<link rel="stylesheet" type="text/css" href="./slick/slick.css" />
-  		<link rel="stylesheet" type="text/css" href="./slick/slick-theme.css" />
 		<link rel="stylesheet" type="text/css" href="css/styles.css" />	
 		<link rel="stylesheet" href="css/fonts.css">
 	</head>
@@ -151,7 +149,7 @@
 				            <div class="product-thumbs-block">
 				                <ul class="product-thumbs">
 				                	<li class="product-thumb">
-				                		<a href=""><!--починить ссылки-->
+				                		<a href="">
 				                			<img src="img/product-thumb.jpg" alt="">
 					                	</a>
 					                </li>
@@ -539,8 +537,6 @@
 			</div>	
 		</footer>
 	</div>
-	<script src="https://code.jquery.com/jquery-2.2.0.min.js" type="text/javascript"></script>
-	<script src="./slick/slick.js" type="text/javascript" charset="utf-8"></script>
 	<script src="js/user.js" type="text/javascript"></script>
 	</body>
 </html>
